# quant-trading

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  README.md  daemon.py  docker-compose.yml  live_trader.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
agents/: macro_risk_manager.py  portfolio_manager.py  sentiment_analyst.py
backtester/: circuit_breaker.py  engine.py
broker/: alpaca.py
config/: logging_config.py  settings.py
data_pipeline/: sec_transcript_fetcher.py
factors/: __init__.py  earnings_nlp.py  fundamentals.py  options_skew.py  pairs_trading.py
strategy/: value_strategy.py
tests/: conftest.py  test_alpaca_broker.py  test_circuit_breaker.py  test_engine.py  test_factors.py  test_portfolio_manager.py  test_state_manager.py  test_value_strategy.py
utils/: rationale_generator.py  state_manager.py
